Added burger views without bsn and updated api specification
