# hhb_services/gebruikers_service/views/burger.py
@@ -1,35 +1,113 @@
 """ MethodView for /gebruiker/<gebruiker_id>/burger/ path """
-
 from flask.views import MethodView
 from flask import request
-from hhb_models.gebruiker import Gebruiker
+from flask_inputs import Inputs
+from flask_inputs.validators import JsonSchema
+from hhb_models.gebruiker import get_gebruiker
 from hhb_models.burger import Burger
 from hhb_services.database import db
+
+new_burger_schema = {
+    "type": "object",
+    "properties": {
+        "voornamen": {
+            "type": "string",
+        },
+        "voorletters": {
+            "type": "string",
+        },
+        "voorvoegsel": {
+            "type": "string",
+        },
+        "geslachtsnaam": {
+            "type": "string",
+        },
+        "straatnaam": {
+            "type": "string",
+        },
+        "huisnummer": {
+            "type": "int",
+        },
+        "huisletter": {
+            "type": "string",
+        },
+        "huistoevoeging": {
+            "type": "string",
+        },
+        "postcode": {
+            "type": "string",
+        },
+        "woonplaatsnaam": {
+            "type": "string",
+        },
+    },
+    "required": [
+        "voornamen",
+        "voorletters",
+        "geslachtsnaam",
+        "straatnaam",
+        "huisnummer",
+        "postcode",
+        "woonplaatsnaam"
+    ]
+}
+
+edit_burger_schema = new_burger_schema
+edit_burger_schema["required"] = []
+
+class NewBurgerInputs(Inputs):
+    """ JSON validator for creating a new Burger """
+    json = [JsonSchema(schema=new_burger_schema)]
+
+class EditBurgerInputs(Inputs):
+    """ JSON validator for updating a Burger """
+    json = [JsonSchema(schema=edit_burger_schema)]
 
 class BurgerView(MethodView):
     """ Methods for /gebruiker/<gebruiker_id>/burger/ path """
 
     def get(self, gebruiker_id):
-        """ Return a burger for current gebruiker """
-        gebruiker = Gebruiker.query.filter_by(id=gebruiker_id).one()
+        """ Return a Burger for current Gebruiker """
+        gebruiker = get_gebruiker(gebruiker_id)
+        if not gebruiker.burger:
+            return {"error": "The current Gebruiker does not have a Burger"}, 404
         return {"data": gebruiker.burger.to_dict()}, 200
 
     def post(self, gebruiker_id):
-        """ Create and return a new Burger """
-        if not request.json:
-            return "Missing user data", 400
+        """ Create and return a new Burger for the current Gebruiker """
+        gebruiker = get_gebruiker(gebruiker_id)
+        if gebruiker.burger:
+            return {"error": "The current Gebruiker already has a Burger"}, 409
+
+        inputs = NewBurgerInputs(request)
+        if not inputs.validate():
+            return {"error": inputs.errors}, 400
+
         burger = Burger()
-        burger.gebruiker_id = gebruiker_id
-        burger.voornamen = request.json["voornamen"]
-        burger.voorletters = request.json["voorletters"]
-        burger.voorvoegsel = request.json["voorvoegsel"]
-        burger.geslachtsnaam = request.json["geslachtsnaam"]
-        burger.straatnaam = request.json["straatnaam"]
-        burger.huisnummer = request.json["huisnummer"]
-        burger.huisletter = request.json["huisletter"]
-        burger.huistoevoeging = request.json["huisnummertoevoeging"]
-        burger.postcode = request.json["postcode"]
-        burger.woonplaatsnaam = request.json["woonplaatsnaam"]
+        burger.gebruiker = gebruiker
+        for key, value in request.json.items():
+            setattr(burger, key, value)
         db.session.add(burger)
         db.session.commit()
-        return {"data": burger.to_dict()}, 201
+        return {"data": gebruiker.burger.to_dict()}, 200
+
+    def patch(self, gebruiker_id):
+        """ Create and return a new Burger for the current Gebruiker """
+        gebruiker = get_gebruiker(gebruiker_id)
+        if not gebruiker.burger:
+            return {"error": "The current Gebruiker does not have a Burger"}, 404
+
+        inputs = EditBurgerInputs(request)
+        if not inputs.validate():
+            return {"error": inputs.errors}, 400
+
+        for key, value in request.json.items():
+            setattr(gebruiker.burger, key, value)
+        db.session.commit()
+        return {"data": gebruiker.burger.to_dict()}, 200
+
+    def delete(self, gebruiker_id):
+        """ Delete the Burger for the current Gebruiker """
+        db.session.delete(get_gebruiker(gebruiker_id).burger)
+        db.session.commit()
+        return {}, 204
